projects/compiler/test/typechecker/import/error_duplicate_enum_name.2.out
Error at %FILE_NAME%:3:6
Duplicate name 'Color'
  |  func Color() {}
          ^
This name is also declared at (1:8)
  |  import Color from "./_exports"
            ^
